fix: add mw-halign-* to comply with MediaWiki 1.40

--- a/src/Mainpage/Mainpage.less
+++ b/src/Mainpage/Mainpage.less
@@ -392,7 +392,9 @@
 		div,
 		table {
 			&.floatleft,
-			&.floatright {
+			&.floatright,
+			&.mw-halign-left,
+			&.mw-halign-right {
 				margin: 1em !important;
 				text-align: center;
 			}
