--- a/src/ResponsiveContent/ResponsiveContent.less
+++ b/src/ResponsiveContent/ResponsiveContent.less
@@ -16,6 +16,7 @@
 				& > .vertical-navbox,
 				& > .stack-clear-right,
 				& > .floatright,
+				& > .mw-halign-right,
 				& > .sistersitebox,
 				& > .mbox-small,
 				& > .tright,
@@ -28,6 +29,7 @@
 				& > .sidebar,
 				& > .vertical-navbox,
 				& > .floatright,
+				& > .mw-halign-right,
 				& > .tright {
 					min-width: 320px !important;
 				}
@@ -47,6 +49,7 @@
 
 				& > #toc,
 				& > .floatleft,
+				& > .mw-halign-left,
 				& > .tleft {
 					margin-right: 1.4em !important;
 				}
